dark mode fix

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,5 @@
 :root {
-	--body-color: #fff;
+	--body-color: #333;
 }
 body{
   background-color: var(--body-color);
